[workspace]
resolver = "2"
members = [
    "pkg/discovery/module/rust",
    "pkg/procmgr/rust",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1.0.98"
cap-std = "3.4"
clap = { version = "4.5", features = ["derive"] }
elf = "0.8.0"
glob-match = "0.2"
http-body-util = "0.1"
hyper = "1"
hyper-util = { version = "0.1", default-features = false, features = ["http1", "server", "tokio"] }
log = "0.4"
lru = { version = "0.16.0", default-features = false }
memchr = "2.7.6"
nom = "7.1"
normalize-path = "0.2"
phf = { version = "0.11", features = ["macros"] }
quick-xml = { version = "0.37", features = ["serialize"] }
rmp-serde = "1.3"
serde = { version = "1.0.219", features = ["derive", "std"] }
serde_json = "1.0"
serde_yaml = "0.9"
simple_logger = "5.0"
thiserror = "2.0.12"
tokio = "1"
uzers = "0.12"
walkdir = "2"
yaml-rust2 = "0.9"
zip = { version = "2.1", default-features = false, features = ["deflate"] }

# dev-dependencies
dircpy = "0.3.19"
memmap2 = "0.9"
nix = { version = "0.30", features = ["signal"] }
scopeguard = "1.2"
temp-env = "0.3"
tempfile = "3.0"

[profile.release]
lto = "fat"
opt-level = "z"
strip = "symbols"
panic = "abort"
